mathml.css: Add more { white-space: nowrap } declarations https://bugs.webkit.org/show_bug.cgi?id=95404
Reviewed by Eric Seidel.

mathml.css declared { white-space: nowrap } for mrow, mfenced, msqrt. It is also needed
for other tags such as msub, msup, msubsup.

Added a test to mathml/presentation/sup.xhtml, and a regression test to roots.xhtml.

Source/WebCore:

* css/mathml.css:
(mo, mrow, mfenced, mfrac, msub, msup, msubsup, munder, mover, munderover, msqrt, mroot):

LayoutTests:

* mathml/presentation/roots.xhtml:
* mathml/presentation/sup.xhtml:
* platform/mac/mathml/presentation/roots-expected.png:
* platform/mac/mathml/presentation/roots-expected.txt:
* platform/mac/mathml/presentation/sup-expected.png:
* platform/mac/mathml/presentation/sup-expected.txt:


Canonical link: https://commits.webkit.org/113870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127769 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/mathml.css
+++ b/Source/WebCore/css/mathml.css
@@ -28,9 +28,6 @@ math[display="block"] {
 
 mo, mrow, mfenced, mfrac, msub, msup, msubsup, munder, mover, munderover, msqrt, mroot {
     display: inline-block;
-}
-
-mrow, mfenced {
     white-space: nowrap;
 }
 
@@ -123,10 +120,6 @@ merror {
     font-weight: bold;
     font-family: sans-serif;
     background-color: lightYellow;
-}
-
-msqrt {
-    white-space: nowrap; /* for the anonymous RenderMathMLRow */
 }
 
 mroot {
